# glpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CPackLists.txt  LICENSE  README.md  annotated.html  attribute__properties_8hpp.html  buffer_8hpp.html  camera_8hpp.html  classglpp_1_1core_1_1object_1_1buffer__t.html  classglpp_1_1core_1_1object_1_1framebuffer__t.html  classglpp_1_1core_1_1object_1_1image__t.html  classglpp_1_1core_1_1object_1_1shader__factory__t.html  classglpp_1_1core_1_1object_1_1shader__program__t.html  classglpp_1_1core_1_1object_1_1shader__t.html  classglpp_1_1core_1_1object_1_1texture__atlas__entry__t.html  classglpp_1_1core_1_1object_1_1texture__atlas__slot__t.html  classglpp_1_1core_1_1object_1_1texture__atlas__t.html  classglpp_1_1core_1_1object_1_1texture__slot__t.html  classglpp_1_1core_1_1object_1_1texture__t.html  classglpp_1_1core_1_1object_1_1vertex__array__t.html  conanfile.py  concepts.html  core_2include_2glpp_2core_2object_2image_8hpp.html  core_2include_2glpp_2core_2render_2light_8hpp.html  files.html  framebuffer_8hpp.html  glpp.tagfile.xml  glppConfig.cmake  group__core.html  group__glpp.html  group__object.html  group__render.html  index.html  modules.html  namespaceglpp.html  namespaceglpp_1_1core.html  namespaceglpp_1_1core_1_1object.html  (+15 more)
example/: CMakeLists.txt
example/01.first_triangle/: 01.first_triangle.cpp  CMakeLists.txt
example/02.input/: 02.input.cpp  CMakeLists.txt  fragment.glsl  vertex.glsl
example/03.texture/: 03.texture.cpp  CMakeLists.txt  fragment.glsl  vertex.glsl
example/03a.texture_atlas/: 03a.texture_atlas.cpp  CMakeLists.txt  fragment.glsl  vertex.glsl
example/04.breakout/: 04.breakout.cpp  CMakeLists.txt  ball_motion_handler.cpp  ball_motion_handler.hpp
example/04.breakout/assets/: fragment.glsl  instance_vertex.glsl  position_vertex.glsl  vertex.glsl
example/05.cube/: 05.cube.cpp  CMakeLists.txt  fragment.glsl  vertex.glsl
example/06.framebuffer/: 06.framebuffer.cpp  CMakeLists.txt  box_filter_fragment.glsl  cube_model.hpp  dof_fragment.glsl  fragment.glsl  pp_vertex.glsl  quad_model.hpp  vertex.glsl
example/07.text/: 07.text.cpp  CMakeLists.txt  fragment.glsl  vertex.glsl
example/08.text_box/: .07.text.cpp.kate-swp  08.text_box.cpp  CMakeLists.txt
example/09.ascii_race/: 09.ascii_race.cpp  CMakeLists.txt
example/10.ui/: 10.ui.cpp  CMakeLists.txt
example/11.lights_out/: 11.lights_out.cpp  CMakeLists.txt
example/12.asset_loading/: 12.asset_loading.cpp  CMakeLists.txt  export_fbx.py  export_gltf.py  fragment.glsl  room.blend  room.mtl  vertex.glsl
example/untitled/: CMakeLists.txt  fragment.glsl  untitled.cpp  vertex.glsl
modules/: CMakeLists.txt
modules/asset/: BlenderExport.cmake  CMakeLists.txt
modules/asset/include/glpp/: asset.hpp
modules/asset/include/glpp/asset/: importer.hpp  light.hpp  material.hpp  mesh.hpp  render.hpp  scene.hpp  scene_graph_t.hpp  scene_renderer.hpp  scene_view.hpp  shading.hpp
modules/asset/include/glpp/asset/render/: mesh_renderer.hpp  mesh_view.hpp  scene_renderer.hpp  scene_view.hpp
modules/asset/include/glpp/asset/shading/: blinn_phong.hpp  depth.hpp  flat.hpp  normal.hpp  shader_factory.hpp  texture_lookup_table.hpp  texture_storage.hpp
modules/asset/src/: blinn_phong.cpp  depth.cpp  flat.cpp  importer.cpp  light.cpp  material.cpp  mesh.cpp  mesh_view.cpp  normal.cpp  scene.cpp  scene_graph_t.cpp  scene_view.cpp  shader_factory.cpp  texture_storage.cpp
modules/core/: CMakeLists.txt
modules/core/include/glpp/: core.hpp  glpp.hpp  object.hpp
modules/core/include/glpp/core/: glpp.hpp  object.hpp  render.hpp
modules/core/include/glpp/core/object/: attribute_properties.hpp  buffer.hpp  framebuffer.hpp  image.hpp  shader.hpp  shader_factory.hpp  texture.hpp  texture_atlas.hpp  vertex_array.hpp
modules/core/include/glpp/core/render/: camera.hpp  light.hpp  model.hpp  renderer.hpp  view.hpp
modules/core/include/glpp/object/: attribute_properties.hpp  framebuffer.hpp  image.hpp  shader.hpp  shader_factory.hpp  texture.hpp  texture_atlas.hpp
modules/core/include/glpp/object/texture_atlas/: freefloat.hpp  grid.hpp  multi.hpp
modules/core/include/glpp/render/: camera.hpp  renderer.hpp  view.hpp
modules/core/src/: camera.cpp  context.cpp  framebuffer.cpp  glpp.cpp  grid.cpp  multi.cpp  shader.cpp  shader_factory.cpp  texture.cpp  texture_atlas.cpp  vertex_array.cpp
modules/core/test/: camera_test.cpp
modules/gl/: CMakeLists.txt
modules/gl/include/: definitions.hpp  spec.hpp
modules/gl/src/: constants.cpp  definitions.cpp  functions.cpp  types.cpp
modules/image/: CMakeLists.txt
modules/image/src/: texture.cpp
modules/system/: CMakeLists.txt
modules/system/include/glpp/: system.hpp
modules/system/include/glpp/system/: input.hpp  window.hpp  windowless_context.hpp
modules/system/src/: input.cpp  window.cpp  windowless_context.cpp
modules/test/: CMakeLists.txt
modules/test/include/glpp/test/: context.hpp  offscreen_driver.hpp
modules/test/src/: context.cpp  offscreen_driver.cpp
modules/testing/: CMakeLists.txt
modules/testing/include/glpp/testing/: context.hpp  offscreen_driver.hpp  window_driver.hpp
modules/testing/src/: context.cpp  offscreen_driver.cpp
modules/text/: CMakeLists.txt
modules/text/include/glpp/: text.hpp
modules/text/include/glpp/text/: charset.hpp  font.hpp  writer.hpp
modules/text/src/: charset.cpp  font.cpp  writer.cpp
modules/ui/: CMakeLists.txt
modules/ui/include/glpp/: ui.hpp
modules/ui/include/glpp/ui/: elements.hpp  ui.hpp
modules/ui/include/glpp/ui/element/: box.hpp  (+8 more)
modules/ui/src/: frame.cpp  image.cpp  ui.cpp  widget.cpp
test/asset/: CMakeLists.txt  cube.blend  import.cpp  render.cpp
test/core/: CMakeLists.txt  attribute_properties.cpp  buffer.cpp  camera.cpp  framebuffer.cpp  image.cpp  model.cpp  object.cpp  renderer.cpp  shader.cpp  shader_factory.cpp  shader_program.cpp  texture.cpp  texture_atlas.cpp  texture_atlas_render.cpp  vertex_array.cpp  view.cpp
test/image/: CMakeLists.txt  image_io.cpp
test/test/: CMakeLists.txt  context.cpp
(+59 files in other folders)
