add_subdirectory(01.first_triangle)
add_subdirectory(02.input)
add_subdirectory(03.texture)
add_subdirectory(04.breakout)
add_subdirectory(05.cube)
add_subdirectory(06.framebuffer)
add_subdirectory(07.text)
add_subdirectory(08.text_box)
add_subdirectory(09.ascii_race)
add_subdirectory(10.ui)
add_subdirectory(11.lights_out)
